--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -97,7 +97,7 @@ img {
 	position: absolute;
 	top: 50%;
 	width: auto;
-	padding: 16px;
+	padding: 12px;
 	margin-top: -24px;
 	color: #fff;
 	font-weight: bold;
@@ -105,6 +105,7 @@ img {
 	transition: 0.2s ease;
 	border-radius: 0 3px 3px 0;
 	background-color: #00000080;
+	user-select: none;
 }
 
 .prev:hover, .next:hover {
