--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -96,8 +96,8 @@ img {
 	cursor: pointer;
 	position: absolute;
 	top: 50%;
-	width: auto;
-	padding: 12px;
+	//width: auto;
+	padding: 10px;
 	margin-top: -24px;
 	color: #fff;
 	font-weight: bold;
