--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -48,6 +48,6 @@
       </footer>
     </main>
     <script src="../../script/script.js"></script>*
-    <script src="../../script/scriptSlide.js"></script>
+    <script src="../../script/scriptSlides.js"></script>
   </body>
 </html>
