--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -47,7 +47,7 @@
           <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/CotCotPack">CotCotPack</a> by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a> © 2022 - All Rights Reserved</span>
       </footer>
     </main>
-    <script src="../../script/script.js"></script>*
+    <script src="../../script/script.js"></script>
     <script src="../../script/scriptSlides.js"></script>
   </body>
 </html>
