--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -13,14 +13,14 @@
     <meta property="og:description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java. CotCotPack by PouletEnSlip © 2022 - All Rights Reserved">
     <meta property="og:site_name" content="CotCotPack | PouletEnSlip">
     <meta property="og:url" content="https://pouletenslip.github.io/pages/cotcotpack/">
-    <meta property="og:image" content="http://pouletenslip.github.io/favicon.ico">
+    <meta property="og:image" content="http://pouletenslip.github.io/icone.png">
     <meta property="og:locale" content="en">
     <meta name="twitter:title" content="CotCotPack | PouletEnSlip">
     <meta name="twitter:description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java. CotCotPack by PouletEnSlip © 2022 - All Rights Reserved">
-    <meta name="twitter:image" content="http://pouletenslip.github.io/favicon.ico">
+    <meta name="twitter:image" content="http://pouletenslip.github.io/icone.png">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#181a1b">
-    <link rel="apple-touch-icon" href="https://pouletenslip.github.io/favicon.ico">
+    <link rel="apple-touch-icon" href="https://pouletenslip.github.io/icone.png">
     <link rel="canonical" href="https://pouletenslip.github.io/pages/cotcotpack/">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
