--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,14 @@
     <meta property="og:description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
     <meta property="og:site_name" content="PouletEnSlip | Personal Website">
     <meta property="og:url" content="https://pouletenslip.github.io/">
-    <meta property="og:image" content="http://pouletenslip.github.io/icone.png">
+    <meta property="og:image" content="http://pouletenslip.github.io/icon.png">
     <meta property="og:locale" content="en">
     <meta name="twitter:title" content="PouletEnSlip | Personal Website">
     <meta name="twitter:description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
-    <meta name="twitter:image" content="http://pouletenslip.github.io/icone.png">
+    <meta name="twitter:image" content="http://pouletenslip.github.io/icon.png">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#181a1b">
-    <link rel="apple-touch-icon" href="https://pouletenslip.github.io/icone.png">
+    <link rel="apple-touch-icon" href="https://pouletenslip.github.io/icon.png">
     <link rel="canonical" href="https://pouletenslip.github.io/">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
