--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -13,14 +13,14 @@
     <meta property="og:description" content="Guide fiable et à jour pour optimiser Windows et améliorer les performances de votre ordinateur. Opti by PouletEnSlip © 2022 - All Rights Reserved">
     <meta property="og:site_name" content="Optimisation | PouletEnSlip">
     <meta property="og:url" content="https://pouletenslip.github.io/pages/opti/">
-    <meta property="og:image" content="http://pouletenslip.github.io/icone.png">
+    <meta property="og:image" content="http://pouletenslip.github.io/icon.png">
     <meta property="og:locale" content="fr-FR">
     <meta name="twitter:title" content="Optimisation | PouletEnSlip">
     <meta name="twitter:description" content="Guide fiable et à jour pour optimiser Windows et améliorer les performances de votre ordinateur. Opti by PouletEnSlip © 2022 - All Rights Reserved">
-    <meta name="twitter:image" content="http://pouletenslip.github.io/icone.png">
+    <meta name="twitter:image" content="http://pouletenslip.github.io/icon.png">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#181a1b">
-    <link rel="apple-touch-icon" href="https://pouletenslip.github.io/icone.png">
+    <link rel="apple-touch-icon" href="https://pouletenslip.github.io/icon.png">
     <link rel="canonical" href="https://pouletenslip.github.io/pages/opti/">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
