--- a/pages/calculator/style.css
+++ b/pages/calculator/style.css
@@ -1,27 +1,24 @@
+html {
+	background-color: #333;
+	text-align: center;
+}
+
 h1 {
-    font-size: 50px;
+    font-size: 40px;
     color: #fff;
-    font-family: Arial ;
     text-shadow: 2px 2px 8px black;
 }
 
-body {
-    background-color: #333;
-    text-align: center;
-    user-select: none;
-}
-
 a {
-    text-decoration: none;
-    color: #efe22e;
-    font-size: 50px;
+	text-decoration: none;
+	color: #fff;
 }
 
 a:hover {
-    color:white;
+	color: rgb(175, 175, 175);
 }
 
-div {
+.ecran {
     background-color: #252525;
     width: 950px;
     border-radius: 50px;
@@ -105,7 +102,6 @@ input:hover {
     font-size: 25px;
     cursor: default;
     text-align: center;
-    user-select: contain;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -114,7 +110,10 @@ input:hover {
         height: 60px;
         font-size: 30px;
     }
-    div {
+    h1 {
+		font-size: 30px;
+	}
+    .ecran {
         width: 95%;
     }
     #display {
@@ -123,7 +122,7 @@ input:hover {
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
     .lol3 {
         display: none;
     }
