--- a/pages/chronometer/style.css
+++ b/pages/chronometer/style.css
@@ -1,50 +1,59 @@
-h1 {
-  font-size: 40px;
-  color: #fff;
+html {
+	background-color: #333;
+	color: white;
+	text-align: center;
 }
 
-body {
-  background-color: #333;
-  color: white;
-  font-family: "Arial";
-  text-align: center;
-  text-shadow: 2px 2px 8px black;
+h1 {
+	font-size: 40px;
+	color: #fff;
+	text-shadow: 2px 2px 8px black;
 }
 
 a {
-  color: rgb(225, 60, 60);
-  text-decoration:none;
-  font-size: 50px;
+	text-decoration: none;
+	color: #fff;
 }
 
 a:hover {
-  color: rgb(255, 130, 130);
+	color: rgb(175, 175, 175);
 }
 
 .bouton {
-  width: 200px;
-  height: 80px;
-  border: 4px solid rgb(225, 60, 60);
-  background: transparent;
-  color: rgb(225, 60, 60);
-  cursor: pointer;
-  font-size: 25px;
-  transition: 0.2s;
-  box-shadow: 0 0 10px rgb(255, 72, 72),
-                0 0 10px rgb(255, 72, 72),
-                0 0 10px rgb(255, 72, 72),
-                0 0 10px rgb(255, 72, 72);
+	width: 200px;
+	height: 80px;
+	border: 4px solid rgb(225, 60, 60);
+	background: transparent;
+	color: rgb(225, 60, 60);
+	cursor: pointer;
+	font-size: 25px;
+	transition: 0.2s;
+	box-shadow: 0 0 10px rgb(255, 72, 72),
+					0 0 10px rgb(255, 72, 72),
+					0 0 10px rgb(255, 72, 72),
+					0 0 10px rgb(255, 72, 72);
 }
 
 .bouton:hover {
-  background: rgba(255, 37, 37, 0.2);
-  color: white;
-  box-shadow: 0 0 12px rgb(255, 110, 110),
-              0 0 12px rgb(255, 110, 110),
-              0 0 12px rgb(255, 110, 110),
-              0 0 12px rgb(255, 110, 110);
+	background: rgba(255, 37, 37, 0.2);
+	color: white;
+	box-shadow: 0 0 12px rgb(255, 110, 110),
+				0 0 12px rgb(255, 110, 110),
+				0 0 12px rgb(255, 110, 110),
+				0 0 12px rgb(255, 110, 110);
 }
 
 #chrono {
-  font-size: 80px;
+	font-size: 80px;
+	text-shadow: 2px 2px 8px black;
+}
+
+@media only screen and (max-width: 800px) {
+	h1 {
+		font-size: 30px;
+	}
+	#chrono {
+		font-size: 60px;
+		text-shadow: 2px 2px 8px black;
+	}
 }
