--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
   <head>
     <title>CotCotPack | PouletEnSlip</title>
     <meta name="description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java. CotCotPack by PouletEnSlip © 2022 - All Rights Reserved">
