--- a/pages/clicktest/style.css
+++ b/pages/clicktest/style.css
@@ -1,18 +1,10 @@
 html {
 	height: 100%;
-    background-image: url(./bg.jpg);
-    background-position: center;
-  	background-repeat: no-repeat;
-    text-align: center;
-}
-
-a {
-	text-decoration: none;
+	background-image: url(./bg.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	text-align: center;
 	color: #fff;
-}
-
-a:hover {
-	color: rgb(175, 175, 175);
 }
 
 h1 {
@@ -21,27 +13,33 @@ h1 {
 	text-shadow: 2px 2px 4px black;
 }
 
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	color: rgb(175, 175, 175);
+}
+
 #info {
-    font-size: 20px;
-    color: white;
-    text-shadow: 2px 2px 4px black;
-    text-align: center;
+	font-size: 20px;
+	text-shadow: 2px 2px 4px black;
 }
 
 #clicker {
-    height: 250px;
-    width: 750px;
-    font-size: 50px;
-    border-radius: 25px;
-    border: 5px solid #750000;
-    background-color: #aaa;
-    transition: 0.1s;
-    cursor: pointer;
+	height: 250px;
+	width: 750px;
+	font-size: 50px;
+	border-radius: 25px;
+	border: 5px solid #750000;
+	background-color: #aaa;
+	transition: 0.1s;
+	cursor: pointer;
 }
 
 #clicker:hover {
-    border: 3px solid #750000;
-    background-color: #AA5050;
+	border: 3px solid #750000;
+	background-color: #AA5050;
 }
 
 #clicker:active {
@@ -49,45 +47,42 @@ h1 {
 }
 
 #cps {
-    font-size: 25px;
-    font-weight: bold;
-    color:white;
-    height: 50px;
-    min-height: 50px;
-    text-shadow: 2px 2px 4px black;
+	font-size: 25px;
+	font-weight: bold;
+	height: 50px;
+	min-height: 50px;
+	text-shadow: 2px 2px 4px black;
 }
 
 .bouton {
-    background-color: #9b0000;
-    border: 2px solid #610000;
+	background-color: #9b0000;
+	border: 2px solid #610000;
 	border-radius: 10px;
-    color: white;
-    text-align: center;
-    width: 150px;
+	color: #fff;
+	text-align: center;
+	width: 150px;
 	height: 50px;
-    font-size: 18px;
+	font-size: 18px;
 	transition: 0.1s;
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .bouton:hover {
 	background-color: #b63636;
-    border: 2px solid #610000;
-	color: white;
 }
 
 @media only screen and (max-width: 1000px) {
-    #clicker {
-        height: 200px;
-        width: 100%;
-    }
-    h1 {
+	#clicker {
+		height: 200px;
+		width: 100%;
+	}
+	h1 {
 		font-size: 30px;
 	}
 }
 
 @media only screen and (min-width: 1921px) {
-    html {
+	html {
 		background-size: cover;
 	}
 }
