--- a/pages/clicktest/style.css
+++ b/pages/clicktest/style.css
@@ -9,11 +9,11 @@ html {
 
 h1 {
 	font-size: 40px;
-	color: #fff;
 	text-shadow: 2px 2px 4px black;
 }
 
 a {
+	color: #fff;
 	text-decoration: none;
 }
 
@@ -38,7 +38,7 @@ a:hover {
 }
 
 #clicker:hover {
-	border: 3px solid #750000;
+	border: 3px;
 	background-color: #AA5050;
 }
 
