--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -35,7 +35,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">Optimiser Windows</h1>
       <h2 class="project-tagline">Guide fiable et à jour</h2>
-        <a href="https://github.com/PouletEnSlip" class="btn">My GitHub</a>
+        <a href="https://github.com/PouletEnSlip" class="btn">Mon GitHub</a>
     </header>
     <div class="progressionbar">
       <div class="progress-container">
