--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,19 +3,19 @@
   <head>
     <title>PouletEnSlip | Personal Website</title>
     <meta name="description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
-    <meta name="application-name" content="PouletEnSlip | Personal Website">
+    <meta name="application-name" content="PouletEnSlip | Personal website">
     <meta name="author" content="PouletEnSlip">
     <meta name="copyright" content="PouletEnSlip">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="PouletEnSlip | Personal Website">
+    <meta property="og:title" content="PouletEnSlip | Personal website">
     <meta property="og:description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
-    <meta property="og:site_name" content="PouletEnSlip | Personal Website">
+    <meta property="og:site_name" content="PouletEnSlip | Personal website">
     <meta property="og:url" content="https://pouletenslip.github.io/">
     <meta property="og:image" content="http://pouletenslip.github.io/icon.png">
     <meta property="og:locale" content="en">
-    <meta name="twitter:title" content="PouletEnSlip | Personal Website">
+    <meta name="twitter:title" content="PouletEnSlip | Personal website">
     <meta name="twitter:description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
     <meta name="twitter:image" content="http://pouletenslip.github.io/icon.png">
     <meta name="robots" content="index, follow">
@@ -34,7 +34,7 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name">PouletEnSlip</h1>
-      <h2 class="project-tagline">Personal Website</h2>
+      <h2 class="project-tagline">Personal website</h2>
         <a href="https://github.com/PouletEnSlip" class="btn">My GitHub</a>
     </header>
     <div class="progressionbar">
