--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <title>PouletEnSlip | Personal Website</title>
+    <title>PouletEnSlip | Personal website</title>
     <meta name="description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
     <meta name="application-name" content="PouletEnSlip | Personal website">
     <meta name="author" content="PouletEnSlip">
