--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,7 +66,8 @@ input[type=checkbox]:checked:after {
 	background-color: rgba(13, 109, 182, 0.7);
 	border: none;
 	border-radius: 10px;
-	transform: rotate(180deg);
+	padding-bottom: 5px;
+	transform: rotate(-90deg);
 	transition: background-color 0.2s ease 0s;
 }
 
