--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
     </div>
     <main id="content" class="main-content" role="main">
       {{ content }}
-      <button id="btnTop" onclick="topFunction()">^</button>
+      <button id="btnTop" onclick="topFunction()">&#10140;</button>
       <footer class="site-footer">
           <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/pouletenslip.github.io">pouletenslip.github.io</a> by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a> © 2022 - All Rights Reserved</span>
       </footer>
