--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -15,6 +15,7 @@
     <meta property="og:url" content="https://pouletenslip.github.io/pages/opti/">
     <meta property="og:image" content="http://pouletenslip.github.io/icon.png">
     <meta property="og:locale" content="fr-FR">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Optimisation | PouletEnSlip">
     <meta name="twitter:description" content="Guide fiable et à jour pour optimiser Windows et améliorer les performances de votre ordinateur. Opti by PouletEnSlip © 2022 - All Rights Reserved">
     <meta name="twitter:image" content="http://pouletenslip.github.io/icon.png">
