--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="PouletEnSlip | Personal website">
     <meta property="og:url" content="https://pouletenslip.github.io/">
     <meta property="og:image" content="http://pouletenslip.github.io/icon.png">
-    <meta property="og:locale" content="en">
+    <meta property="og:locale" content="en-US">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="PouletEnSlip | Personal website">
     <meta name="twitter:description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
