--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="CotCotPack | PouletEnSlip">
     <meta property="og:url" content="https://pouletenslip.github.io/pages/cotcotpack/">
     <meta property="og:image" content="http://pouletenslip.github.io/icon.png">
-    <meta property="og:locale" content="en">
+    <meta property="og:locale" content="en-US">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="CotCotPack | PouletEnSlip">
     <meta name="twitter:description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java. CotCotPack by PouletEnSlip © 2022 - All Rights Reserved">
