--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -25,7 +25,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans";
   font-size: 16px;
   line-height: 1.5;
   color: #606c71;
@@ -44,7 +44,7 @@ a {
   display: inline-block;
   margin-bottom: 1rem;
   color: rgba(255, 255, 255, .7);
-  background-color: rgba(255, 255, 255, .1);
+  background: rgba(255, 255, 255, .1);
   border-color: rgba(255, 255, 255, .2);
   border-style: solid;
   border-width: 1px;
@@ -54,7 +54,7 @@ a {
   &:hover {
     color: rgba(255, 255, 255, .8);
     text-decoration: none;
-    background-color: rgba(255, 255, 255, .2);
+    background: rgba(255, 255, 255, .2);
     border-color: rgba(255, 255, 255, .3);
   }
 
@@ -68,14 +68,12 @@ a {
 
   @include medium {
     padding: .6rem .9rem;
-    font-size: .9rem;
   }
 
   @include small {
     display: block;
     width: 100%;
     padding: .75rem;
-    font-size: .9rem;
 
     + .btn {
       margin-top: 1rem;
@@ -87,7 +85,7 @@ a {
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #003D7B;
+  //background: #003D7B;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3CradialGradient id='a' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23006733'/%3E%3Cstop offset='1' stop-color='%23003D7B'/%3E%3C/radialGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='750' x2='1550' y2='750'%3E%3Cstop offset='0' stop-color='%23005257'/%3E%3Cstop offset='1' stop-color='%23003D7B'/%3E%3C/linearGradient%3E%3Cpath id='s' fill='url(%23b)' d='M1549.2 51.6c-5.4 99.1-20.2 197.6-44.2 293.6c-24.1 96-57.4 189.4-99.3 278.6c-41.9 89.2-92.4 174.1-150.3 253.3c-58 79.2-123.4 152.6-195.1 219c-71.7 66.4-149.6 125.8-232.2 177.2c-82.7 51.4-170.1 94.7-260.7 129.1c-90.6 34.4-184.4 60-279.5 76.3C192.6 1495 96.1 1502 0 1500c96.1-2.1 191.8-13.3 285.4-33.6c93.6-20.2 185-49.5 272.5-87.2c87.6-37.7 171.3-83.8 249.6-137.3c78.4-53.5 151.5-114.5 217.9-181.7c66.5-67.2 126.4-140.7 178.6-218.9c52.3-78.3 96.9-161.4 133-247.9c36.1-86.5 63.8-176.2 82.6-267.6c18.8-91.4 28.6-184.4 29.6-277.4c0.3-27.6 23.2-48.7 50.8-48.4s49.5 21.8 49.2 49.5c0 0.7 0 1.3-0.1 2L1549.2 51.6z'/%3E%3Cg id='g'%3E%3Cuse href='%23s' transform='scale(0.12) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.2) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.25) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(0.3) rotate(-20)'/%3E%3Cuse href='%23s' transform='scale(0.4) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(0.5) rotate(20)'/%3E%3Cuse href='%23s' transform='scale(0.6) rotate(60)'/%3E%3Cuse href='%23s' transform='scale(0.7) rotate(10)'/%3E%3Cuse href='%23s' transform='scale(0.835) rotate(-40)'/%3E%3Cuse href='%23s' transform='scale(0.9) rotate(40)'/%3E%3Cuse href='%23s' transform='scale(1.05) rotate(25)'/%3E%3Cuse href='%23s' transform='scale(1.2) rotate(8)'/%3E%3Cuse href='%23s' transform='scale(1.333) rotate(-60)'/%3E%3Cuse href='%23s' transform='scale(1.45) rotate(-30)'/%3E%3Cuse href='%23s' transform='scale(1.6) rotate(10)'/%3E%3C/g%3E%3C/defs%3E%3Cg transform='rotate(0 0 0)'%3E%3Cg transform='rotate(0 0 0)'%3E%3Ccircle fill='url(%23a)' r='3000'/%3E%3Cg opacity='0.5'%3E%3Ccircle fill='url(%23a)' r='2000'/%3E%3Ccircle fill='url(%23a)' r='1800'/%3E%3Ccircle fill='url(%23a)' r='1700'/%3E%3Ccircle fill='url(%23a)' r='1651'/%3E%3Ccircle fill='url(%23a)' r='1450'/%3E%3Ccircle fill='url(%23a)' r='1250'/%3E%3Ccircle fill='url(%23a)' r='1175'/%3E%3Ccircle fill='url(%23a)' r='900'/%3E%3Ccircle fill='url(%23a)' r='750'/%3E%3Ccircle fill='url(%23a)' r='500'/%3E%3Ccircle fill='url(%23a)' r='380'/%3E%3Ccircle fill='url(%23a)' r='250'/%3E%3C/g%3E%3Cg transform='rotate(0 0 0)'%3E%3Cuse href='%23g' transform='rotate(10)'/%3E%3Cuse href='%23g' transform='rotate(120)'/%3E%3Cuse href='%23g' transform='rotate(240)'/%3E%3C/g%3E%3Ccircle fill-opacity='0.1' fill='url(%23a)' r='3000'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
@@ -141,8 +139,6 @@ a {
 }
 
 .main-content {
-  word-wrap: break-word;
-
   :first-child {
     margin-top: 0;
   }
@@ -165,7 +161,7 @@ a {
   }
   
   kbd {
-    background-color: #fafbfc;
+    background: #fafbfc;
     border: 1px solid #c6cbd1;
     border-bottom-color: #959da5;
     border-radius: 3px;
@@ -190,7 +186,6 @@ a {
   h6 {
     margin-top: 2rem;
     margin-bottom: 1rem;
-    font-weight: normal;
     color: #159957;
   }
 
@@ -200,10 +195,11 @@ a {
 
   code {
     padding: 2px 4px;
-    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    //font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font-family: Consolas;
     font-size: .9rem;
     color: #567482;
-    background-color: #9dbce5;
+    background: #9dbce5;
     border-radius: .3rem;
   }
 
@@ -211,10 +207,11 @@ a {
     padding: 0.8rem;
     margin-top: 0;
     margin-bottom: 1rem;
-    font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    //font: 1rem Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font: 1rem Consolas;
     color: #567482;
     word-wrap: normal;
-    background-color: #9dbce5;
+    background: #9dbce5;
     border: solid 1px #dce6f0;
     border-radius: .3rem;
 
@@ -225,7 +222,7 @@ a {
       color: #567482;
       word-break: normal;
       white-space: pre;
-      background: transparent;
+      background: none;
       border: 0;
     }
   }
@@ -246,7 +243,6 @@ a {
     font-size: .9rem;
     line-height: 1.45;
     border-radius: .3rem;
-    -webkit-overflow-scrolling: touch;
   }
 
   pre code,
@@ -258,7 +254,7 @@ a {
     overflow: initial;
     line-height: inherit;
     word-wrap: normal;
-    background-color: transparent;
+    background: none;
     border: 0;
 
     &:before,
@@ -291,9 +287,6 @@ a {
     display: block;
     width: 100%;
     overflow: auto;
-    word-break: normal;
-    word-break: keep-all;
-    -webkit-overflow-scrolling: touch;
 
     th {
       font-weight: bold;
@@ -326,7 +319,7 @@ a {
     height: 2px;
     padding: 0;
     margin: 1rem 0;
-    background-color: #eff0f1;
+    background: #eff0f1;
     border: 0;
   }
 }
@@ -335,18 +328,7 @@ a {
   padding-top: 2rem;
   margin-top: 2rem;
   border-top: solid 1px #eff0f1;
-
-  @include large {
-    font-size: 1rem;
-  }
-
-  @include medium {
-    font-size: 1rem;
-  }
-
-  @include small {
-    font-size: .9rem;
-  }
+  font-size: 1rem;
 }
 
 .site-footer-owner {
