--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -45,7 +45,7 @@
     <main id="content" class="main-content" role="main">
       {{ content }}
       <footer class="site-footer">
-          <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip/Opti">Opti</a> by <a href="https://github.com/PouletEnSlip">PouletEnSlip</a> © 2022 - All Rights Reserved</span>
+          <span class="site-footer-owner"><a href="https://github.com/PouletEnSlip">PouletEnSlip</a> © 2022 - All Rights Reserved</span>
       </footer>
     </main>
     <button type="button" id="btnTop" onclick="topFunction()">&#10140;</button>
