--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -190,7 +190,7 @@ a {
 
   code {
     padding: 2px 4px;
-    font-family: Consolas;
+    font-family: Courier;
     font-size: .9rem;
     color: #567482;
     background: #9dbce5;
@@ -201,7 +201,7 @@ a {
     padding: 0.8rem;
     margin-top: 0;
     margin-bottom: 1rem;
-    font: 1rem Consolas;
+    font: 1rem Courier;
     color: #567482;
     word-wrap: normal;
     background: #9dbce5;
