--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -40,6 +40,7 @@ a {
 }
 
 .btn {
+  font-family: "Roboto";
   display: inline-block;
   margin-bottom: 1rem;
   color: rgba(255, 255, 255, .7);
@@ -159,6 +160,7 @@ a {
   }
   
   kbd {
+    font-family: "Roboto";
     background: none;
     border: 1px solid #c6cbd1;
     border-bottom: 2px solid #c6cbd1;
