--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,7 @@ body {
 
 input[type=checkbox] {
 	position: relative;
+	font-family: "Roboto";
 	cursor: pointer;
 	-moz-appearance: initial;
 	vertical-align: middle;
