--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,6 +66,7 @@ input[type=checkbox]:checked:after {
 
 #btnTop {
 	position: fixed;
+	font-family: "Roboto";
 	bottom: 15px;
 	right: 15px;
 	font-size: 30px;
