--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -23,11 +23,12 @@ html {
 }
 
 body {
+  background: #181a1b;
   padding: 0;
   margin: 0;
-  font-size: 16px;
+  font-size: 1.1rem;
   line-height: 1.5;
-  color: #606c71;
+  color: #a6a19a;
 }
 
 a {
@@ -156,7 +157,7 @@ a {
 
   @include small {
     padding: 2rem 1rem;
-    font-size: 1rem;
+    font-size: 1.1rem;
   }
   
   kbd {
