--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -32,7 +32,7 @@ body {
 }
 
 a {
-  color: #1e6bb8;
+  color: #65ace6;
   text-decoration: none;
 
   &:hover {
@@ -187,7 +187,7 @@ a {
   h6 {
     margin-top: 2rem;
     margin-bottom: 1rem;
-    color: #159957;
+    color: #4ec78b;
   }
 
   p {
