--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -44,19 +44,19 @@ a {
   font-family: "Roboto";
   display: inline-block;
   margin-bottom: 1rem;
-  color: rgba(255, 255, 255, .7);
-  background: rgba(255, 255, 255, .1);
-  border-color: rgba(255, 255, 255, .2);
+  color: rgba(150, 150, 150, .7);
+  background: rgba(150, 150, 150, .1);
+  border-color: rgba(150, 150, 150, .2);
   border-style: solid;
   border-width: 1px;
   border-radius: .3rem;
   transition: .2s;
 
   &:hover {
-    color: rgba(255, 255, 255, .8);
+    color: rgba(150, 150, 150, .8);
     text-decoration: none;
-    background: rgba(255, 255, 255, .2);
-    border-color: rgba(255, 255, 255, .3);
+    background: rgba(150, 150, 150, .2);
+    border-color: rgba(150, 150, 150, .3);
   }
 
   + .btn {
@@ -210,7 +210,7 @@ a {
     font: 1rem Courier Prime;
     color: #567482;
     word-wrap: normal;
-    background: #9dbce5;
+    background: #255ea8;
     border: solid 1px #dce6f0;
     border-radius: .3rem;
 
@@ -287,7 +287,7 @@ a {
     height: 2px;
     padding: 0;
     margin: 1rem 0;
-    background: #eff0f1;
+    background: #a6a19a;
     border: 0;
   }
 }
