--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -44,7 +44,7 @@ a {
   font-family: "Roboto";
   display: inline-block;
   margin-bottom: 1rem;
-  color: #fff;
+  background: rgba(255, 255, 255, .7);
   background: rgba(75, 75, 75, .1);
   border-color: rgba(75, 75, 75, .2);
   border-style: solid;
@@ -53,7 +53,6 @@ a {
   transition: .2s;
 
   &:hover {
-    //color: rgba(75, 75, 75, .8);
     text-decoration: none;
     background: rgba(75, 75, 75, .2);
     border-color: rgba(75, 75, 75, .3);
