--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -44,9 +44,9 @@ a {
   font-family: "Roboto";
   display: inline-block;
   margin-bottom: 1rem;
-  background: rgba(255, 255, 255, .7);
-  background: rgba(75, 75, 75, .1);
-  border-color: rgba(75, 75, 75, .2);
+  color: rgba(255, 255, 255, .7);
+  background: rgba(50, 50, 50, .1);
+  border-color: rgba(50, 50, 50, .2);
   border-style: solid;
   border-width: 1px;
   border-radius: .3rem;
@@ -54,8 +54,8 @@ a {
 
   &:hover {
     text-decoration: none;
-    background: rgba(75, 75, 75, .2);
-    border-color: rgba(75, 75, 75, .3);
+    background: rgba(50, 50, 50, .2);
+    border-color: rgba(50, 50, 50, .3);
   }
 
   + .btn {
