--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -197,8 +197,8 @@ a {
     padding: 2px 4px;
     font-family: Courier Prime;
     font-size: .9rem;
-    color: #567482;
-    background: #215066;
+    color: #a6a19a;
+    background: #163852;
     border-radius: .3rem;
   }
 
@@ -207,9 +207,9 @@ a {
     margin-top: 0;
     margin-bottom: 1rem;
     font: 1rem Courier Prime;
-    color: #567482;
+    color: #a6a19a;
     word-wrap: normal;
-    background: #215066;
+    background: #163852;
     border: solid 1px #dce6f0;
     border-radius: .3rem;
 
@@ -283,11 +283,11 @@ a {
   }
 
   hr {
-    height: 2px;
+    //height: 1px;
     padding: 0;
     margin: 1rem 0;
     background: #a6a19a;
-    border: 0;
+    border-top: 1px #a6a19a;
   }
 }
 
