--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,7 @@ body {
 
 input[type=checkbox] {
 	position: relative;
+	color: #a6a19a;
 	font-family: "Roboto";
 	cursor: pointer;
 	-moz-appearance: initial;
