--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -283,9 +283,7 @@ a {
   }
 
   hr {
-    padding: 0;
-    margin: 1rem 0;
-    border-top: 1px solid #a6a19a;
+	  border-top: 2px #a6a19a;
   }
 }
 
