--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -268,25 +268,20 @@ a {
 
 		th, td {
 			padding: .5rem 1rem;
-			border: 1px solid #e9ebec;
+			border: 1px solid #a6a19a;
 		}
-	}
-
-	hr {
-		border-top: 2px #333;
 	}
 }
 
 .site-footer {
 	padding-top: 2rem;
 	margin-top: 2rem;
-	border-top: solid 1px #eff0f1;
+	border-top: solid 1px #a6a19a;
 	font-size: 1rem;
 }
 
 .site-footer-owner {
 	display: block;
-	font-weight: bold;
 }
 
 .site-footer-credits {
