--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -203,6 +203,7 @@ a {
 		margin-bottom: 1rem;
 		font: 1rem Courier Prime;
 		color: #a6a19a;
+		word-break: break-all;
 		background: #144163;
 		border: solid 1px #dce6f0;
 		border-radius: .3rem;
