--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,7 +109,7 @@ img {
 	margin-top: -24px;
 	color: #fff;
 	font-weight: bold;
-	font-size: 20px;
+	font-size: 1rem;
 	border-radius: 0 3px 3px 0;
 	background: #00000080;
 	user-select: none;
@@ -153,7 +153,7 @@ img {
 
 .fade {
 	animation: fade;
-	animation-duration: 1s;
+	animation-duration: .2s;
 }
 
 @keyframes fade {
