--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>PouletEnSlip | Personal website</title>
-    <meta name="description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
+    <meta name="description" content="PouletEnSlip's personal website where you can find all his WEB, C#, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
     <meta name="application-name" content="PouletEnSlip | Personal website">
     <meta name="author" content="PouletEnSlip">
     <meta name="copyright" content="PouletEnSlip">
@@ -10,14 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:title" content="PouletEnSlip | Personal website">
-    <meta property="og:description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
+    <meta property="og:description" content="PouletEnSlip's personal website where you can find all his WEB, C#, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
     <meta property="og:site_name" content="PouletEnSlip | Personal website">
     <meta property="og:url" content="https://pouletenslip.github.io/">
     <meta property="og:image" content="http://pouletenslip.github.io/icon.png">
     <meta property="og:locale" content="en-US">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="PouletEnSlip | Personal website">
-    <meta name="twitter:description" content="PouletEnSlip's personal website where you can find all his WEB, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
+    <meta name="twitter:description" content="PouletEnSlip's personal website where you can find all his WEB, C#, C++, Python and other projects. pouletenslip.github.io by PouletEnSlip © 2022 - All Rights Reserved">
     <meta name="twitter:image" content="http://pouletenslip.github.io/icon.png">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#181a1b">
