--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <title>CotCotPack | PouletEnSlip</title>
-    <meta name="description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java. CotCotPack by PouletEnSlip © 2022 - All Rights Reserved">
+    <meta name="description" content="CotCotPack is a 32x PVP / Build / Survival resource pack for Minecraft Java. CotCotPack by PouletEnSlip © 2022 - All Rights Reserved">
     <meta name="application-name" content="CotCotPack | PouletEnSlip">
     <meta name="author" content="PouletEnSlip">
     <meta name="copyright" content="PouletEnSlip">
@@ -10,14 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
     <meta property="og:title" content="CotCotPack | PouletEnSlip">
-    <meta property="og:description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java. CotCotPack by PouletEnSlip © 2022 - All Rights Reserved">
+    <meta property="og:description" content="CotCotPack is a 32x PVP / Build / Survival resource pack for Minecraft Java. CotCotPack by PouletEnSlip © 2022 - All Rights Reserved">
     <meta property="og:site_name" content="CotCotPack | PouletEnSlip">
     <meta property="og:url" content="https://pouletenslip.github.io/pages/cotcotpack/">
     <meta property="og:image" content="http://pouletenslip.github.io/icon.png">
     <meta property="og:locale" content="en-US">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="CotCotPack | PouletEnSlip">
-    <meta name="twitter:description" content="CotCotPack is a PVP / Build / Survival resource pack for Minecraft Java. CotCotPack by PouletEnSlip © 2022 - All Rights Reserved">
+    <meta name="twitter:description" content="CotCotPack is a 32x PVP / Build / Survival resource pack for Minecraft Java. CotCotPack by PouletEnSlip © 2022 - All Rights Reserved">
     <meta name="twitter:image" content="http://pouletenslip.github.io/icon.png">
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#181a1b">
