--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -178,10 +178,16 @@ a {
 		max-width: 100%;
 	}
 
-	h1, h2, h3, h4, h5, h6 {
+	h1, h2 {
 		margin-top: 2rem;
 		margin-bottom: 1rem;
 		color: #00c77e;
+	}
+	
+	h3, h4, h5, h6 {
+		margin-top: 1rem;
+		margin-bottom: 1rem;
+		color: #a6a19a;
 	}
 
 	p {
