--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name">PouletEnSlip</h1>
-      <h2 class="project-tagline">Personal website</h2>
+      <h2 class="project-tagline">&gt;_ Personal website</h2>
         <a href="https://github.com/PouletEnSlip" class="btn">My GitHub</a>
     </header>
     <div class="progressionbar">
