--- a/_layouts/cotcot.html
+++ b/_layouts/cotcot.html
@@ -28,7 +28,7 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name"><img src="./img/logo.png" width="300"></h1>
-       <h2 class="project-tagline">Minecraft Resource Pack</h2>
+       <h2 class="project-tagline">&gt;_ Minecraft Resource Pack</h2>
         <a href="https://github.com/PouletEnSlip" class="btn">My GitHub</a>
     </header>
     <div class="progressionbar">
