--- a/_layouts/opti.html
+++ b/_layouts/opti.html
@@ -28,7 +28,7 @@
   <body>
     <header class="page-header" role="banner">
       <h1 class="project-name">Optimiser Windows</h1>
-      <h2 class="project-tagline">Guide fiable et à jour</h2>
+      <h2 class="project-tagline">&gt;_ Guide fiable et à jour</h2>
         <a href="https://github.com/PouletEnSlip" class="btn">Mon GitHub</a>
     </header>
     <div class="progressionbar">
